--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,4 +3,4 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home/jzmjhbff/public_html/
     - /bin/cp -R dist/assets $DEPLOYPATH
-    - /bin/cp index.html $DEPLOYPATH
+    - /bin/cp dist/index.html $DEPLOYPATH
